# GridRipper

./: CMakeLists.txt  CMakeSettings.json  HOWTO_configure.txt  Spherical conversions.xlsx  gaunt.txt
Gripper/: CMakeLists.txt
Gripper/inc/Gripper/: FloatingExceptions.hpp  GauntMath.hpp  Gripper_Config.hpp  Gripper_Config.hpp.in  Gripper_Export.hpp  Logger.hpp  MultipoleDefs.hpp  MultipoleTypes.hpp  PDE.hpp  Runtime.hpp
Gripper/inc/Gripper/cl/: clLogger.hpp  clRuntime.hpp
Gripper/inc/Gripper/qt/: qtLogger.hpp
Gripper/inc/Gripper/stl/: stlArithmeticProgression.hpp  stlConfig.hpp  stlExpansionConstantFactor.hpp  stlExpansionExtent.hpp  stlExpansionField.hpp  stlExpansionIndex.hpp  stlGauntCoefficient.hpp  stlGauntIndex.hpp  stlGauntMatrix.hpp  stlGnuPlotter.hpp  stlIndexableIterator.hpp  stlLogger.hpp  stlMath.hpp  stlMathConstants.hpp  stlMathExceptions.hpp  stlMultipoleDefs.hpp  stlMultipoleTypes.hpp  stlParity.hpp  stlQuadrature.hpp  stlRadialExtent.hpp  stlRadialIndex.hpp  stlRadialVector.hpp  stlRuntime.hpp  stlSWSphericalIndexIterator.hpp  stlSphericalExtent.hpp  stlSphericalIndex.hpp  stlSphericalVector.hpp  stlSpinWeightedGauntIndex.hpp  stlSpinWeightedGauntMatrix.hpp  stlSpinWeightedSphericalExtent.hpp  stlSpinWeightedSphericalIndex.hpp  stlSpinWeightedSphericalVector.hpp  stlYlms_dynamic.hpp
Gripper/src/Gripper/: AnyOption.cpp  Gaunt.cpp  GauntMath.cpp  Logger.cpp  Radial.cpp  Runtime.cpp  Spherical.cpp
Gripper/src/Gripper/cl/: clLogger.cpp  clRuntime.cpp
Gripper/src/Gripper/qt/: Logger.cpp
Gripper/src/Gripper/stl/: stlExpansionExtent.cpp  stlExpansionIndex.cpp  stlGauntCoefficient.cpp  stlGauntIndex.cpp  stlGauntMatrix.cpp  stlLogger.cpp  stlRadialExtent.cpp  stlRadialIndex.cpp  stlRuntime.cpp  stlSphericalExtent.cpp  stlSphericalIndex.cpp
cmake/Modules/: FindGSL.cmake  FindPLplot.cmake.txt
examples/: CMakeLists.txt
examples/STL-Example1-GauntDistribution/: CMakeLists.txt
examples/STL-Example1-GauntDistribution/inc/: STL_Example1_GauntDistribution.hpp
examples/STL-Example1-GauntDistribution/src/: STL_Example1_GauntDistribution.cpp
examples/STL-Example2-GauntContraction/: CMakeLists.txt
examples/STL-Example2-GauntContraction/inc/: STL_Example2_GauntContraction.hpp
examples/STL-Example2-GauntContraction/src/: STL_Example2_GauntContraction.cpp
examples/STL-Example2-HiggsParticle/: CMakeLists.txt
examples/STL-Example2-HiggsParticle/inc/: STL_Example2_HiggsParticle.hpp
examples/STL-Example2-HiggsParticle/src/: STL_Example2_HiggsParticle.cpp
examples/STL-Example3-RungeKutta4/: CMakeLists.txt
examples/STL-Example3-RungeKutta4/doc/: Gömbsúlyos.docx  HiggsParticle.docx
examples/STL-Example3-RungeKutta4/inc/: STL_Example3_RungeKutta4.hpp
examples/STL-Example3-RungeKutta4/src/: STL_Example3_RungeKutta4.cpp
examples/STL-Example4-Lattice1D/: CMakeLists.txt
examples/STL-Example4-Lattice1D/inc/: STL_Example4_Lattice1D.hpp
examples/STL-Example4-Lattice1D/src/: STL_Example4_Lattice1D.cpp
examples/STL-Example5-Schwarzschild/: CMakeLists.txt
examples/STL-Example5-Schwarzschild/inc/: STL_Example5_Schwarzschild.hpp
examples/STL-Example5-Schwarzschild/src/: STL_Example5_Schwarzschild.cpp
lib/: Gripper.exp  Gripper.lib
lib/Debug/: Gripper.exp  Gripper.lib
lib/Release/: Gripper.exp  Gripper.lib
tests/: CMakeLists.txt
tests/Base-Test1-Runtime/: CMakeLists.txt
tests/Base-Test1-Runtime/inc/: Base-Test1-Runtime.hpp
tests/Base-Test1-Runtime/src/: Base-Test1-Runtime.cpp
tests/STL-Test0-Quadrature/: CMakeLists.txt
tests/STL-Test0-Quadrature/inc/: STL_Test0_Quadrature.hpp
tests/STL-Test0-Quadrature/src/: STL_Test0_Quadrature.cpp
tests/STL-Test1-RK4/: CMakeLists.txt
tests/STL-Test1-RK4/inc/: STL-Test1-RK4.hpp  STL_Test1_RK4.hpp
tests/STL-Test1-RK4/src/: STL_Test1_RK4.cpp
tests/STL-Test1-Runtime/: CMakeLists.txt
tests/STL-Test1-Runtime/src/: STL-Test1-Runtime.cpp
tests/STL-Test2-Arithmetics/: CMakeLists.txt
tests/STL-Test2-Arithmetics-Simple/: CMakeLists.txt
tests/STL-Test2-Arithmetics-Simple/inc/: STL_Test2_Arithmetics_Simple.hpp
tests/STL-Test2-Arithmetics-Simple/src/: STL-Test2-Arithmetics.cpp  STL_Test2_Arithmetics_Simple.cpp
tests/STL-Test2-Arithmetics/inc/: STL-Test2-Arithmetics.hpp
tests/STL-Test3-Arithmetics-Compound/: CMakeLists.txt
tests/STL-Test3-Arithmetics-Compound/inc/: STL-Test3-RK4.hpp  STL_Test3_Arithmetics_Compound.hpp
tests/STL-Test3-Arithmetics-Compound/src/: STL_Test3_Arithmetics_Compound.cpp
tests/STL-Test3-RK4/: CMakeLists.txt
tests/STL-Test3-RK4/src/: STL-Test3-RK4.cpp
tests/STL-Test4-Arithmetics-SW-Simple/: CMakeLists.txt
tests/STL-Test4-Arithmetics-SW-Simple/inc/: STL_Test4_Arithmetics_SW_Simple.hpp
tests/STL-Test4-Arithmetics-SW-Simple/src/: STL_Test4_Arithmetics_SW_Simple.cpp
tests/STL-Test4-Plotter/: CMakeLists.txt
tests/STL-Test4-Plotter/inc/: STL-Test4-Plotter.hpp
tests/STL-Test4-Plotter/src/: STL-Test4-Plotter.cpp
tests/STL-Test5-Arithmetics-SW-Compound/: CMakeLists.txt
tests/STL-Test5-Arithmetics-SW-Compound/src/: STL_Test5_Arithmetics_SW_Compound.cpp
tests/TestCLArithmetics/: CMakeLists.txt
tests/TestCLArithmetics/inc/: TestCLArithmetics.hpp
tests/TestCLArithmetics/src/: TestCLArithmetics.cpp
tests/TestCLRuntime/: CMakeLists.txt
tests/TestCLRuntime/src/: TestCLRuntime.cpp
